1 file modified, 26 added, 4 deleted

--- a/index.html
+++ b/index.html
@@ -1,23 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
-  </body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="destyle.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+
+<body>
+
+<!-- SECTION 01 ファーストビュー -->
+<section class="header">
+  <div class="header-DMMlogo">
+    <a href="https://book.dmm.com/">
+      <img src="images/DMM.com_logo_RGB.png" alt>
+    </a>
+  </div>
+    <!-- 横長バナー↓ -->
+  <h1 class="header-banner-1280160"><img src="images/header_bnr_1280x160.jpg" alt>
+  </h1>
+    <!-- カバー・紹介文↓ -->
+  <div class="header-intro">
+    <img class="header-cover" src="images/lp/300057_himitsu_001.jpg" alt></img>
+    <h2>秘密の授業</h2>
+    <hr>
+    <p>「今からする事…絶対誰にも言っちゃ駄目よ？」<br>
+    両親を亡くし、結城家へ引き取られて新しい家族の元で幸せに暮らしていた青年、俊太。<br>
+    ある夜、養父母のセックスを見てしまい―――朝起きると彼のパンツは白く濡れてしまっていた。<br>毎晩繰り返す快感――それに気付いた養母の真理子。そして彼女はある決意をする。<br>
+    「私が…教えてあげないと…」<br>
+    皆が寝静まった真夜中に、性に無知な青年のための誰にも言えない『秘密の授業』が始まる――！？
+    </p>
+  </div>
+</section>
+
+<!-- SECTION 02 本篇 -->
+<main>
+  <!-- マンガ本篇↓ -->
+  <section class="contents">
+    <li> <img src="images/lp/image-0001.jpg" alt></li>
+    <li> <img src="images/lp/image-0002.jpg" alt></li>
+    <li> <img src="images/lp/image-0003.jpg" alt></li>
+    <li> <img src="images/lp/image-0004.jpg" alt></li>
+    <li> <img src="images/lp/image-0005.jpg" alt></li>
+    <li> <img src="images/lp/image-0006.jpg" alt></li>
+    <li> <img src="images/lp/image-0007.jpg" alt></li>
+  </section>
+  <!-- 購入section↓ -->
+  <section class="purchase">
+    <div class="purchase-intro">
+      <div class="purchase-intro-cover">
+        <img class="header-cover" src="images/lp/300057_himitsu_001.jpg" alt></img>
+      </div>
+      <div class="purchase-intro-text">
+        <h2>秘密の授業</h2>
+        <hr>
+        <p>「今からする事…絶対誰にも言っちゃ駄目よ？」<br>
+        両親を亡くし、結城家へ引き取られて新しい家族の元で幸せに暮らして...
+        </p>
+      </div>
+    </div>
+    <div class="purchase-link">
+      <a class="link1" href="https://accounts.dmm.com/service/login/password/=/path=https%3A%2F%2Fbook.dmm.com%2Fbasket%2F/">
+        <p class="name">70％OFFクーポンを使う</p>
+        <img class="arw" src="images/arrow_right01.png" alt>
+      </a>
+      <a class="link2" href="https://book.dmm.com/detail/k924aruuu00932/">
+        <p class="name">無料立ち読み</p>
+        <img class="arw" src="images/arrow_right01.png" alt>
+      </a>
+    </div>
+    <div class="purchase-method">
+      <img src="images/payment-icons.png" alt>
+    </div>
+    <div class="caption">
+      <p>※クーポンのご利用範囲には条件がございます</p>
+      <p>copyright</p>
+    </div>
+  </section>
+</main>
+
+<!-- SECTION 03 FIXボタン -->
+
+<div class="btn-member-fixed">
+  <a class="link1" href="https://book.dmm.com/detail/k924aruuu00932/">
+    <p class="name">続きを読む</p>
+    <img class="arw" src="images/arrow_right01.png" alt>
+  </a>
+</div>
+
+<!-- SECTION 04 FOOTER ポリシーなどの情報 DO NOT TOUCH -->
+<footer class="_n4v1-footer">
+  <div class="_n4v1-link_top">
+    <a href="#top">▲このページのトップへ</a>
+  </div>
+  <div class="_n4v1-subfooter">
+    <p>ヘルプ / お問い合わせ</p>
+    <ul>
+      <li><a href="https://help.dmm.com/" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;help&quot;}">よくある質問</a></li>
+      <li><a href="https://book.dmm.com/sitemap/" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter">サイトマップ</a></li>
+      <li><a href="http://book.dmm.com/info_bookviewer.html" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter">作品の閲覧方法</a></li>
+      <li><a href="https://book.dmm.com/feature/abj/index.html" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter">コンテンツ使用許諾について</a></li>
+      <li><a href="https://terms.dmm.com/digital_service/" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter">デジタルコンテンツ利用規約</a></li>
+      <li><a href="https://inquiry.dmm.com/" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;inquiry&quot;}">お問い合わせ</a></li>
+      <li><a href="https://mail-information.dmm.com" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;mailmagazine&quot;}">メールマガジン</a></li>
+      <li><a href="https://terms.dmm.com/profile/" target="_blank" rel="noopener" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;profile&quot;}">会社概要</a></li>
+      <li><a href="https://dmm-corp.com/business/partnership/" target="_blank" rel="noopener" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;partnership&quot;}">特別採用・事業譲渡(M&amp;A)に関するお問い合わせ</a></li>
+      <li><a href="https://terms.dmm.com/partner/" target="_self" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;partner&quot;}">ビジネスパートナー募集</a></li>
+      <li><a href="https://dmm-corp.com/press/" target="_blank" rel="noopener" data-navi-pigeon-click="" data-various="navigation" data-option="subfooter" data-extra-map="{&quot;link&quot;: &quot;press&quot;}">プレスリリース</a></li>
+    </ul>
+  </div>
+  <div class="_n4v1-mainfooter">
+    <span><a href="https://terms.dmm.com/member/" target="_self">・会員規約</a></span>
+    <span><a href="https://terms.dmm.com/privacy/" target="_self">・個人情報保護に関して</a></span>
+    <span><a href="https://terms.dmm.com/commerce/" target="_self">・特定商取引法に基づく表示</a></span>
+    <span><a href="https://terms.dmm.com/" target="_self">・規約一覧</a></span>
+    <span><a href="https://dmm-corp.com/recruit/" target="_blank" rel="noopener">・採用情報</a></span>
+  </div>
+  <p class="_n4v1-copyright">Copyright © since 1998 DMM All Rights Reserved.</p>
+</footer>
+
+</body>
 </html>
